# Article_Enrichment_V2

./: .gitignore  README.md  compose.yml  pyproject.toml  run.py
config/: .env.example
db/: __init__.py  data_access.py
docs/: INSTRUCTIONS.md
docs/Project_Complete_Workflow_Technical_Guide/: Workflow_Technical_Guide.md  complete_workflow_technical_guide.md
outputs/: enriched_article_1.md  enriched_article_2.md
scripts/: __init__.py  install_uv.py  run.py
src/: pipeline.py
src/ai/: __init__.py  llm_select.py  qa_ai.py
src/api/: app.py
src/content_enrichment/: __init__.py  asset_validation.py  qa.py  renderer.py  shortlist.py
src/flows/: crewai_agents.py  crewai_flow.py
src/shared/: __init__.py  types.py
src/worker/: celery_app.py
tests/: test_pipeline_offline_failover.py  test_qa_ai_structured.py  test_qa_fallback.py  test_renderer_cross_paragraph.py  test_renderer_list_bold_hyphen.py  test_renderer_no_duplicate_append.py
